# OOP

./: .gitignore  CMakeLists.txt
Task1/: 1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp
Task2/: 2-6.cpp  2-7.cpp  2-8.cpp  2-9.cpp
Task3/: 3-10.cpp  3-11.cpp  3-12.cpp
Task4/: 4-13.cpp  4-14.cpp
